feat: modify cli interface to match new localmodel